--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,12 @@
  div {
-     #border-style: solid;
+     #order-style: solid;
      #border-width: 0.1em;
      #border-color: green;
+ }
+
+<!--catch all for below objects to avoid overflow -->
+ img, embed, object, video {
+     max-width: 100%;
  }
  
  body {
@@ -9,9 +14,14 @@
      color: #747704;
      font-weight: 300;
  }
+
+ #container {
+     width: 90%;
+ }
  
  .text-fade {
      color: #BCBBBB;
+     text-align: center;
  }
  
  .text-thin {
@@ -27,8 +37,9 @@
  }
  
  .fixImage {
-     width: 100%;
-     height: 100%
+     max-width: 100%;
+     margin-left: auto;
+     margin-right: auto;
  }
  
  .skills {
