--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,11 +1,8 @@
- div {
-     #order-style: solid;
-     #border-width: 0.1em;
-     #border-color: green;
- }
-
-<!--catch all for below objects to avoid overflow -->
- img, embed, object, video {
+ /*catch all for below objects to avoid overflow*/
+ img,
+ embed,
+ object,
+ video {
      max-width: 100%;
  }
  
@@ -14,38 +11,72 @@
      color: #747704;
      font-weight: 300;
  }
-
+ 
  #container {
      width: 90%;
  }
  
- .text-fade {
-     color: #BCBBBB;
-     text-align: center;
- }
  
+ /* text styles*/
  .text-thin {
      font-weight: 100;
  }
  
- .title_super {
+ .title-super {
      font-size: 60px;
  }
  
- .logo_super {
+ .logo-super {
      margin-top: 20px;
  }
  
- .fixImage {
+ .fix-image {
      max-width: 100%;
      margin-left: auto;
      margin-right: auto;
  }
  
  .skills {
-     padding: 0px 0px 0px 0px;
+     padding: 0 0 0 0;
  }
  
- .progress_custom {
+ .progress-custom {
      margin-bottom: 5px;
  }
+ .text-left {
+     text-align: left;
+ }
+ .attribute {
+     color:#51c5ee;   
+ }
+ .right {
+     float: right;
+ }
+
+
+
+/* Media Query */
+
+@media all and (min-width: 960px) {
+    .title-super {
+        font-size: 50px;
+    }
+}
+
+@media all and (max-width: 959px) and (min-width: 600px) {
+    .title-super {
+        font-size: 40px;
+    }
+}
+
+@media all and (max-width: 599px) and (min-width: 320px) {
+    .title-super {
+        font-size: 35px;
+    }
+}
+
+@media all and (max-width: 319px) and (min-width: 100px) {
+    .title-super {
+        font-size: 20px;
+    }
+}
