--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,7 +14,7 @@
  }
  
  hr {
-     margin: 2px 2px 2px 2px;
+     margin:  2px;
  }
  
  #container {
@@ -45,9 +45,13 @@
      margin-left: auto;
      margin-right: auto;
  }
+
+ .main-logo-img {
+    width: 30%;
+ }
  
  .skills {
-     padding: 0 0 0 0;
+     padding: 0;
  }
  
  .progress-custom {
