--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,10 +14,10 @@
  }
  
  hr {
-     margin:  2px;
+     margin: 2px;
  }
  
- #container {
+ .reduced-width {
      width: 90%;
      margin-left: auto;
      margin-right: auto;
@@ -45,9 +45,9 @@
      margin-left: auto;
      margin-right: auto;
  }
-
+ 
  .main-logo-img {
-    width: 30%;
+     width: 30%;
  }
  
  .skills {
@@ -74,27 +74,123 @@
      float: right;
  }
  /* Media Query */
+ /* responsive nav menu 
+    reference:http://www.hongkiat.com/blog/responsive-web-nav/
+ */
  
- @media all and (min-width: 960px) {
-     .title-super {
-         font-size: 50px;
+ nav {
+     height: 40px;
+     width: 100%;
+     background: #455868;
+     font-size: 11pt;
+     font-family: 'PT Sans', Arial, sans-serif;
+     font-weight: bold;
+     position: relative;
+     border-bottom: 2px solid #283744;
+ }
+ 
+ nav ul {
+     padding: 0;
+     margin: 0 auto;
+     width: 100%;
+     height: 40px;
+ }
+ 
+ nav li {
+     float: left;
+     display: inline;
+ }
+ 
+ .clearfix:before,
+ .clearfix:after {
+     content: " ";
+     display: table;
+ }
+ 
+ .clearfix:after {
+     clear: both;
+ }
+ 
+ .clearfix {
+     *zoom: 1;
+ }
+ 
+ nav a {
+     color: #fff;
+     display: inline-block;
+     width: 100px;
+     text-align: center;
+     text-decoration: none;
+     line-height: 40px;
+     text-shadow: 1px 1px 0px #283744;
+ }
+ 
+ nav li a {
+     border-right: 1px solid #576979;
+     box-sizing: border-box;
+     -moz-box-sizing: border-box;
+     -webkit-box-sizing: border-box;
+ }
+ 
+ nav li:last-child a {
+     border-right: 0;
+ }
+ 
+ nav a:hover,
+ nav a:active {
+     background-color: #8c99a4;
+ }
+ 
+ nav a#pull {
+     display: none;
+ }
+ 
+ @media screen and (max-width: 600px) {
+     nav {
+         height: auto;
+     }
+     nav ul {
+         width: 100%;
+         display: block;
+         height: auto;
+     }
+     nav li {
+         width: 50%;
+         float: left;
+         position: relative;
+     }
+     nav li a {
+         border-bottom: 1px solid #576979;
+         border-right: 1px solid #576979;
+     }
+     nav a {
+         text-align: left;
+         width: 100%;
+         text-indent: 25px;
      }
  }
  
- @media all and (max-width: 959px) and (min-width: 600px) {
-     .title-super {
-         font-size: 40px;
+ @media only screen and (max-width: 480px) {
+     nav {
+         border-bottom: 0;
      }
- }
- 
- @media all and (max-width: 599px) and (min-width: 320px) {
-     .title-super {
-         font-size: 35px;
+     nav ul {
+         display: none;
+         height: auto;
      }
- }
- 
- @media all and (max-width: 319px) and (min-width: 100px) {
-     .title-super {
-         font-size: 20px;
+     nav a#pull {
+         display: block;
+         background-color: #283744;
+         width: 100%;
+         position: relative;
+     }
+     nav a#pull:after {
+         content: "";
+         width: 30px;
+         height: 30px;
+         display: inline-block;
+         position: absolute;
+         right: 15px;
+         top: 10px;
      }
  }
